# ox_task

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/code_guardian/: __init__.py  cli.py  github.py  graph.py  logging_config.py  models.py  report.py  runner.py  trivy.py
tests/: test_cli.py  test_github.py  test_graph.py  test_report.py  test_trivy_errors.py  test_trivy_parser.py
