[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-guardian"
version = "0.1.0"
description = "CLI wrapper around Trivy for scanning Git repositories"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "David Kocharyan" }]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
code-guardian = "code_guardian.cli:app"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/code_guardian"]

[tool.hatch.build.targets.sdist]
only-include = ["src/code_guardian", "tests", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
